--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Obrigado</h2>
-									<p>Isso é um pouquinho de tudo que vivemos! <br> Não existirão palavras pra escrever o quanto sou feliz ao seu lado!
+									<p>Isso é um pouquinho de tudo que vivemos! <br> Não existirão palavras pra escrever o quanto sou feliz ao seu lado!<br>
+										Feliz bodas de Perfume! <br>
+										A combinação entre os dois elementos representa a essência da vida e o doce que ela traz. 
 									</p>
 								</div>
 								<div class="inner columns divided">
