--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">Design: <a href="#">santfellipe</a>.</div>
 
 					</div>
 
