--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Família</h2>
-									<p>Você foi o início de tudo que tenho de mais valor na vida! <br>
+									<p>Você foi o início de tudo que tenho de mais valioso na vida! <br>
 										<strong>Nossa Família!</strong></p>
 								</div>
 								<div class="gallery">
@@ -106,7 +106,7 @@
 								<div class="intro color4">
 									<h2 class="major">Obrigado</h2>
 									<p>Isso é um pouquinho de tudo que vivemos! <br> Não existirão palavras pra escrever o quanto sou feliz ao seu lado!<br>
-										Feliz bodas de Perfume! <br>
+										Feliz bodas de Perfume e açúcar! <br>
 										A combinação entre os dois elementos representa a essência da vida e o doce que ela traz. 
 									</p>
 								</div>
